[gd_scene load_steps=6 format=3 uid="uid://cvyccl4g0283q"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_7ttjy"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_button.gd" id="1_eu5b2"]
[ext_resource type="Theme" uid="uid://b22lwt742gddp" path="res://resources/themes/ui_theme.tres" id="1_xwc2h"]
[ext_resource type="Texture2D" uid="uid://de44sklo76a7r" path="res://img/ui/LOGO.png" id="3_505pb"]
[ext_resource type="Texture2D" uid="uid://y48w2ddumydf" path="res://img/ui/frame.png" id="3_r8hme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xwc2h")
script = ExtResource("1_7ttjy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r8hme")

[node name="TextureRectLogo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = -225.0
offset_right = 225.0
offset_bottom = 128.0
grow_horizontal = 2
texture = ExtResource("3_505pb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -31.5
offset_top = -50.5
offset_right = 31.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Play"
script = ExtResource("1_eu5b2")

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Options"
script = ExtResource("1_eu5b2")

[node name="ButtonCredits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Credits"
script = ExtResource("1_eu5b2")

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Exit"
script = ExtResource("1_eu5b2")

[connection signal="pressed" from="VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
